# localsend-rs

./: Cargo.toml
assets/web/: error-403.html  index.html  main.js
src/: lib.rs
src/cli/commands/: receive.rs
src/client/: client.rs  mod.rs  trust_policy.rs
src/discovery/: multicast.rs
src/server/: events.rs  handlers.rs  mod.rs  routes.rs  server.rs  state.rs  web_share.rs
src/tui/: app.rs
supply-chain/: audits.toml  config.toml
tests/: interop_message.rs  interop_web_share.rs
