[package]
name = "localsend-rs"
version = "0.1.2"
edition = "2024"
description = "Rust implementation of LocalSend protocol - cross-platform file transfer tool"
license = "MIT"
repository = "https://github.com/CrossCopy/localsend-rs"
documentation = "https://github.com/CrossCopy/localsend-rs#readme"
homepage = "https://crosscopy.io"
exclude = [".github/"]

[features]
default = ["cli", "https"]
cli = [
    "dep:clap",
    "dep:indicatif",
    "dep:colored",
    "dep:inquire",
    "dep:comfy-table",
]
https = [
    "dep:axum-server",
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
    "dep:rcgen",
]
tui = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:color-eyre",
    "dep:tui-input",
    "dep:strum",
    "dep:itertools",
    "cli",
]
all = ["cli", "https", "tui"]

[dependencies]
# Core
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.19", features = ["v4", "serde"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
reqwest = { version = "0.13", features = ["json", "stream", "rustls"] }
tower = "0.5"
rustls = { version = "0.23.36", features = ["ring"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
rcgen = { version = "0.14", optional = true }

# Networking
async-stream = "0.3"
futures-util = "0.3"
bytes = "1.11"
tokio-util = { version = "0.7", features = ["io"] }
socket2 = { version = "0.6", features = ["all"] }
if-addrs = "0.13"

# Utilities
mime_guess = "2.0"
sha2 = "0.10"
base64 = "0.22"

# CLI (only with cli feature)
clap = { version = "4.5", features = ["derive", "env"], optional = true }
indicatif = { version = "0.18", optional = true }
colored = { version = "3.1", optional = true }
inquire = { version = "0.9", optional = true }
comfy-table = { version = "7.2", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.89"

# TUI (only with tui feature)
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29", optional = true }
color-eyre = { version = "0.6", optional = true }
tui-input = { version = "0.15", optional = true }
strum = { version = "0.27", features = ["derive"], optional = true }
itertools = { version = "0.14", optional = true }
chrono = { version = "0.4.43", features = ["serde"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full", "test-util"] }
